--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,17 @@
 spring.application.name=matchmaker
 server.port=8080
+#spring.data.mongodb.uri=${MONGODB_URI}
+#spring.data.mongodb.database=${MONGODB_DATABASE}
+#steam.api.key=${STEAM_API_KEY}
+#jwt.secret=${JWT_SECRET}
 
-spring.data.mongodb.uri=${MONGODB_URI}
-spring.data.mongodb.database=${MONGODB_DATABASE}
 
-steam.api.key=${STEAM_API_KEY}
+# Configuración de MongoDB (modo Atlas)
+spring.data.mongodb.uri=mongodb+srv://slopguz055:EUJBBV1%21a@matchmaker.ibmktbg.mongodb.net/?retryWrites=true&w=majority&appName=matchmaker
+spring.data.mongodb.database=matchmaker
 
-jwt.secret=${JWT_SECRET}
+# Clave de la API de Steam
+steam.api.key=5116DC9A8927605697AC1142B237E41D
+
+# Secreto JWT
+jwt.secret=SI1~D)]uh(A!*9Td7+=(3hQe0TE%yhW8
